Cleaning up a bit