@@ -1,15 +1,14 @@
 package com.github.maracas.visitors;
 
-import java.util.Arrays;
-import java.util.HashSet;
-import java.util.Set;
-
 import com.github.maracas.brokenUse.APIUse;
 import com.github.maracas.util.SpoonTypeHelpers;
-
 import japicmp.model.JApiCompatibilityChange;
 import spoon.reflect.declaration.CtClass;
 import spoon.reflect.reference.CtTypeReference;
+
+import java.util.HashSet;
+import java.util.List;
+import java.util.Set;
 
 /**
  * Visitor in charge of gathering all method added to interface issues in
@@ -44,7 +43,7 @@ public class MethodAddedToInterfaceVisitor extends BreakingChangeVisitor {
 		if (!cls.isAbstract()) {
 			CtTypeReference<?> typeRef = cls.getReference();
 			Set<CtTypeReference<?>> interfaces = new HashSet<>(typeRef.getSuperInterfaces());
-			Set<CtTypeReference<?>> superCls = new HashSet<>(Arrays.asList(typeRef.getSuperclass()));
+			Set<CtTypeReference<?>> superCls = new HashSet<>(List.of(typeRef.getSuperclass()));
 
 			if (SpoonTypeHelpers.isSubtype(interfaces, clsRef))
 				brokenUse(cls, cls, clsRef, APIUse.IMPLEMENTS);
